# cppbin

./: .travis.yml  CMakeLists.txt  README.rst  cc  configure
src/: CMakeLists.txt  main.cpp
src/deserialization/: deserialize.cpp
src/iterators/: FileIterator.hpp
test/: CMakeLists.txt  main.cpp
test/iterators/: FileIterator.cpp
